--- a/trabajo/app/build.gradle
+++ b/trabajo/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -29,6 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures{
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -39,7 +44,22 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-database-collection:18.0.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.4'
+    implementation 'com.android.volley:volley:1.2.1'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "come.squareup.retrofit2:retrofit2:2.9.0"
+    implementation "come.squareup.retrofit2:converter-gson:2.9.0"
+    implementation 'org.jetbrains.kotlin:kotlin-coroutines-anddroid:1.3.6'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
