--- a/trabajo/app/src/main/AndroidManifest.xml
+++ b/trabajo/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.trabajo">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,13 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Trabajo">
         <activity
-            android:name=".SplashActivity"
+            android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".SegundaActivity"
+            android:name=".ForgotPassActivity"
             android:exported="false" />
         <activity
-            android:name=".PrimeraActivity"
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
